@@ -76,9 +76,7 @@ public class AssignCommand extends ReporterCommand {
 		try {
 			final int index = getServiceModule().getLastViewedReportService().getIndexOrLastViewedReport(sender, args.get(0));
 
-			if (!getServiceModule().getReportValidatorService().isReportIndexValid(index)) {
-				return;
-			}
+			getServiceModule().getReportValidatorService().requireReportIndexValid(index);
 
 			if (!getServiceModule().getReportPermissionService().canAlterReport(sender, index)) {
 				return;
