@@ -86,9 +86,7 @@ public class RespondCommand extends ReporterCommand {
 
 			final int index = getServiceModule().getLastViewedReportService().getIndexOrLastViewedReport(sender, args.get(0));
 
-			if (!getServiceModule().getReportValidatorService().isReportIndexValid(index)) {
-				return;
-			}
+			getServiceModule().getReportValidatorService().requireReportIndexValid(index);
 
 			if (args.size() == 1) {
 				teleportToReport(player, index, "reported");
