@@ -400,3 +400,4 @@ Changelog:
                 Updated Bukkit API to 1.15.2-R0.1-SNAPSHOT.
                 Updated supported Java version to 1.7.
                 Set Spigot api-version to stop getting flagged as a legacy plugin.
+                Fixed no message being sent to the command sender if the report index is out of range.
